compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__logical_op_not.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    % Compatibility with booleans\n    var b : boolean\n    var _b := not b\n"
---
"b"@"src/main.t:43..44" [ConstVar(Var, No)]: boolean
"_b"@"src/main.t:63..65" [ConstVar(Var, No)]: boolean
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
