compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__logical_op_or.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    % Compatibility with booleans\n    var b : boolean\n    var _bb := b or b\n"
---
"b"@"src/main.t:43..44" [ConstVar(Var, No)]: boolean
"_bb"@"src/main.t:63..66" [ConstVar(Var, No)]: boolean
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
