compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__peel_ref_in_for_bound.snap
---
source: compiler/toc_analysis/src/typeck/test.rs
expression: "var a : int for : a .. a end for"
---
"a"@(FileId(1), 4..5) [ConstVar(Var, No)]: int
"<root>"@(dummy) [Module(No)]: <error>

