compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__peel_ref_in_get_arg.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var a : int var s : string get s : a"
---
"a"@"src/main.t:4..5" [ConstVar(Var, No)]: int
"s"@"src/main.t:16..17" [ConstVar(Var, No)]: string
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
