compiler/toc-analysis/src/typeck/snapshots/toc_analysis__typeck__test__peel_ref_in_put_arg.snap
---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "var a : int put a : a : a : a"
---
"a"@"src/main.t:4..5" [ConstVar(Var, No)]: int
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
